<resources>
    <string name="app_name">Weather App</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="search">Search</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="title_detail">Detail</string>
</resources>